[gd_scene load_steps=10 format=2]

[ext_resource path="res://board/interactive_parts/slot.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/game/coin.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 12 ), SubResource( 11 ), SubResource( 10 ) ],
"loop": true,
"name": "HorizontalFlip",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.5, 20 )

[node name="Slot" type="Area2D" groups=["Slots"]]
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
use_parent_material = true
frames = SubResource( 8 )
animation = "HorizontalFlip"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 4 )
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Slot_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
